# LLM-Data-Engineer-Study

./: .gitignore  CLAUDE.md  README.md
milestone_p1/: .coverage  .pre-commit-config.yaml  pyproject.toml
milestone_p1/src/feature_engine/: __init__.py  pipeline.py  transforms.py  types.py
milestone_p1/tests/: conftest.py  test_pipeline.py  test_transforms.py
milestones/: phase1-python-engineering.md  phase2-multimodal-engine.md  phase3-training-data.md  phase4-evaluation-driven.md
progress/: learning-tracker.md
sessions/: SESSION-TEMPLATE.md
sessions/2026-05-16/: session-notes.md
